# wotp

./: .env.example  .gitignore  .goreleaser.yml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
cli/: go.mod  go.sum
cli/cmd/wotp/: main.go
core/: Dockerfile  go.mod  go.sum
core/dashboard/: embed.go  index.html  package-lock.json  package.json  vite.config.ts
inspiration/: Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
inspiration/app/: globals.css  layout.tsx  page.tsx
inspiration/components/: AccountApiKeys.tsx  AccountInfoCards.tsx  AccountList.tsx  AccountModal.tsx  AppLayout.tsx  AuditLogs.tsx  CodeSnippetsModal.tsx  ConnectionLogs.tsx  DashboardStats.tsx  ExtendedStatsCard.tsx  MessageLogs.tsx  Navbar.tsx  OrganizationEditModal.tsx  OrganizationList.tsx  OrganizationModal.tsx  OrganizationSwitcher.tsx  QuotaIndicator.tsx  SideBar.tsx  StatsCard.tsx  VisualQuota.tsx  WebhookSettingsCard.tsx  WebhookStats.tsx  WebhookTest.tsx
inspiration/docs/: README.md  architecture.md  authentication.md  n8n-integration.md  networking.md  whatsapp-api.md
inspiration/emails/: templates.ts
inspiration/hooks/: useWebhookStats.ts
inspiration/stores/: store.ts  useAppStore.ts
inspiration/types/: index.ts
sdks/go/: README.md  client.go  client_test.go  errors.go  go.mod  types.go
sdks/python/: README.md  pyproject.toml
sdks/python/wotp/: __init__.py  client.py  errors.py  types.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
(+116 files in other folders)
