[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wotp"
version = "1.0.0"
description = "Official Python SDK for Wotp — WhatsApp OTP, self-hosted, one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wotp" },
]
keywords = ["wotp", "otp", "whatsapp", "verification", "2fa", "auth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/wotp/wotp"
Documentation = "https://github.com/wotp/wotp"
Repository = "https://github.com/wotp/wotp"

[tool.hatch.build.targets.wheel]
packages = ["wotp"]
